<resources>

    <string name="app_name">Pregnancy Duration</string>
    <string name="countDown">210</string>
    <string name="days">Days Away Or</string>
    <string name="weeks">30 Weeks 0 Days</string>
    <string name="dueDateString">Due Date:</string>
    <string name="dueDate">12/29/2012</string>
    <string name="trimesterString">Trimester:</string>
    <string name="trimester">2nd</string>
    <string name="nextTrimesterString">Next Trimester In:</string>
    <string name="nextTrimester">13 Weeks 2 Days</string>
    <string name="progressString">Progress:</string>
    <string name="progress">13 Weeks 5 Days</string>
    <string name="lastDocString">Last Doctor Visit:</string>
    <string name="lastDoc">6/10/2012</string>
    <string name="nextDocString">Next Doctor Visit:</string>
    <string name="nextDoc">7/10/2012</string>
    <string name="genderString">Gender:</string>
    <string name="gender">Unknown</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Pregnancy Duration</string>

</resources>
